--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ async-graphql-actix-web = "3.0"
 env_logger = "0.9"
 lambda_http="0.4"
 lambda_runtime="0.4"
+log = "0.4"
 sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }
 serde = "1.0"
 serde_json = "1.0"
