Wire up graphql init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/lib.rs"
 actix-http = "2.2.1"
 actix-web = "3.3.2"
 anyhow = "1.0"
-async-graphql = "3.0"
+async-graphql =  { version = "3.0", features = [ "apollo_tracing", "log" ] }
 async-graphql-actix-web = "3.0"
 env_logger = "0.9"
 lambda_http="0.4"
