--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ name = "lib"
 path = "src/lib.rs"
 
 [dependencies]
-actix-http = "2.2.1"
-actix-web = "3.3.2"
+actix-http = "3.0.0-beta.16"
+actix-web = "4.0.0-beta.15"
 anyhow = "1.0"
-async-graphql =  { version = "2.0", features = [ "apollo_tracing", "log" ] }
-async-graphql-actix-web = "2.0"
+async-graphql =  { version = "3.0", features = [ "apollo_tracing", "log" ] }
+async-graphql-actix-web = "3.0"
 env_logger = "0.9"
 lambda_http="0.4"
 lambda_runtime="0.4"
