--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/lib.rs"
 actix-http = "3.0.0-beta.16"
 actix-web = "4.0.0-beta.15"
 anyhow = "1.0"
-async-graphql =  { version = "3.0", features = [ "apollo_tracing", "log" ] }
+async-graphql =  { version = "3.0", features = [ "apollo_tracing", "dataloader", "log" ] }
 async-graphql-actix-web = "3.0"
 env_logger = "0.9"
 futures = { version = "^0.3" }
