--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,14 @@ async-graphql-actix-web = "3.0"
 env_logger = "0.9"
 futures = { version = "^0.3" }
 futures-util = { version = "^0.3" }
+itertools = "0.10"
 lambda_http="0.4"
 lambda_runtime="0.4"
 log = "0.4"
 sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
 serde = "1.0"
 serde_json = "1.0"
+statrs = "0.15.0"
 tokio = "1.14"
 
 [dev-dependencies]
